# chess2-canvas

./: .gitignore  Cargo.toml  README.md
bevy_interact_2d/: Cargo.toml
bevy_interact_2d/examples/: trash_cleanup.rs
bevy_interact_2d/src/: lib.rs
src/: board.rs  drag_system.rs  icon.rs  main.rs  screenshot.rs
